// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`archive pack set refusals should refuse a default selection beside suffixed sections 1`] = `
{
  "exitCode": 1,
  "stderr": [
    "Error: Invalid error: Packing configuration section '[include_folders]' is a default selection, which every target of the set would claim at once. Name it '[include_folders.<target>]' for the target that packs it.",
  ],
  "stdout": [
    "Pack config: <sandbox>/default-selection.ltx",
  ],
}
`;

exports[`archive pack set refusals should refuse a section declaring inheritance 1`] = `
{
  "exitCode": 1,
  "stderr": [
    "Error: Invalid error: Packing configuration section '[include_folders.meshes]' inherits another section, and a set replaces a section whole rather than merging it. Write the entries this section needs instead of inheriting them.",
  ],
  "stdout": [
    "Pack config: <sandbox>/inherited.ltx",
  ],
}
`;

exports[`archive pack set refusals should refuse a suffixed section whose base names no section of a target 1`] = `
{
  "exitCode": 1,
  "stderr": [
    "Error: Invalid error: Packing configuration section '[compression.configs]' names no known section of a target. A target section is one of options, include_files, include_folders, exclude_folders, header followed by a dot and the target name.",
  ],
  "stdout": [
    "Pack config: <sandbox>/unknown-base.ltx",
  ],
}
`;

exports[`archive pack set refusals should refuse a target selecting nothing beside another 1`] = `
{
  "exitCode": 1,
  "stderr": [
    "Error: Invalid error: Packing target 'meshes' selects nothing, and an empty selection means the whole source tree, which would overlap every other target of the set. Name the files or directories it packs.",
  ],
  "stdout": [
    "Pack config: <sandbox>/empty.ltx",
    "Pack source: <resources>/gamedata",
    "Pack destination: <sandbox>/empty",
  ],
}
`;

exports[`archive pack set refusals should refuse an unknown key in a target's options 1`] = `
{
  "exitCode": 1,
  "stderr": [
    "Error: Invalid error: Packing configuration section '[options.configs]' carries unknown key 'compression'. It reads exclude_exts, mode, extension, max_volume_size, skip_list.",
  ],
  "stdout": [
    "Pack config: <sandbox>/unknown-key.ltx",
  ],
}
`;

exports[`archive pack set refusals should refuse two targets claiming one file 1`] = `
{
  "exitCode": 1,
  "stderr": [
    "Error: Invalid error: Refusing to pack the set from '<resources>/gamedata': 1 engine name(s) are claimed by more than one target, so each of those files would be packed into two archives and the engine would read whichever volume mounts last. Narrow the selections: 'configs\\misc\\inventory_icons.ltx' is claimed by 'whole' and 'part'",
  ],
  "stdout": [
    "Pack config: <sandbox>/overlap.ltx",
    "Pack source: <resources>/gamedata",
    "Pack destination: <sandbox>/overlap",
  ],
}
`;

exports[`archive pack set refusals should write nothing but the configurations the test authored 1`] = `
[
  {
    "path": "default-selection.ltx",
    "sha256": "c3a9ec83f76326d6add9d82023bce105863de1f08538b6e439669b7204e739be",
    "size": 73,
  },
  {
    "path": "empty.ltx",
    "sha256": "9fbe207cc9e78a34ada9e41a5c40c793be4473e843832c3147d5e7db4a7b11ff",
    "size": 67,
  },
  {
    "path": "inherited.ltx",
    "sha256": "018efd17e251e14a80848e06dcf3dee23383eab1593410cdd5f13e69630704a4",
    "size": 105,
  },
  {
    "path": "overlap.ltx",
    "sha256": "a61e23c218830634ede49768356ec630bfcb58b6f603adf02917070aaf469f35",
    "size": 83,
  },
  {
    "path": "unknown-base.ltx",
    "sha256": "0231d3ae2e978e1c54f00e934b92f38aad01abfd28e499fb79888376e129c990",
    "size": 74,
  },
  {
    "path": "unknown-key.ltx",
    "sha256": "eca1644bd3cc66fcff37abb317b01be4059e4c93c7c8f91a70a9610d305dcf4d",
    "size": 119,
  },
]
`;
